# esn

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: connecting-a-problem.md  how-it-works.md  mutators.md  weak-model-amplification.md
docs/assets/: README.md  capture_run.py  make_hero_figure.py  make_value_figures.py
examples/: quickstart.py  run.py  run_circle_packing_agent.py  run_circle_packing_llm.py  run_tsp_agent.py
examples/circle_packing/: domain.py  evaluator.py  initial.py
examples/local_sqli_lab/: README.md  domain.py  evaluator.py  initial.py  target.py
examples/skeleton/: domain.py  run.py
examples/tsp/: domain.py  instance_bundle.py
examples/web_ctf_chain/: README.md  domain.py  evaluator.py  initial.py  target.py
runs/h2h_bf/: biasfree_nz.py  scipy_seed.py
runs/novelty_exp/: METHODOLOGY_AND_FINDINGS.md  audit_metric.py  audit_oe.py  capture_candidates.py  capture_gpt35.py  grid_clean.sh  grid_heavy.sh  grid_jackpot.sh  grid_matched.sh  grid_nz.sh  grid_oe.sh  grid_oe_seeded.sh  grid_oe_seeded_more.sh  hunt25.py  inspect25.py  noantiopt_grid.sh  nz_smoke.py  oe_prompt.py  results_clean.jsonl  results_heavy.jsonl  results_jackpot.jsonl  results_matched.jsonl  results_nz.jsonl  results_oe.jsonl  results_oe_seeded.jsonl  results_oe_seeded_ext.jsonl  results_powered.jsonl  run_specdim.py  test_noantiopt.py  trace_iternov.py
src/esn/: __init__.py  api.py
tests/: test_cli_runner.py  test_local_sqli_lab.py  test_offline_smoke.py  test_web_ctf_chain.py
tests/core/: test_archives.py  test_models.py  test_novelty.py  test_operator_credit.py  test_search_mode_selector.py
tests/engine/: conftest.py  test_api_run.py  test_ast_features.py  test_batch_budget.py  test_branch_manager.py  test_claude_agent_client.py  test_claude_agent_mutator.py  test_claude_agent_timeout.py  test_compiler.py  test_engine.py  test_engine_batch.py  test_engine_negative_score_seed.py  test_engine_with_mocks.py  test_family_tracker.py  test_llm_components.py  test_mode_selection_bbp.py  test_mutator_framing.py  test_mutator_policies.py  test_mutator_transcript.py  test_onboarding_guards.py  test_persistence.py  test_preferred_solution_shape.py  test_protocols.py  test_slot_scorer.py  (+3 more)
(+73 files in other folders)
